--- a/action.yml
+++ b/action.yml
@@ -23,11 +23,14 @@ runs:
         python-version: '3.13' 
     
     - name: Install dependencies
+      shell: bash
       run: |
         pip install --upgrade pip
         pip install ${{ github.action_path }}/requirements.txt
       
     - name: Run Python script
+      shell: bash
       env:
-        GITHUB_WORKSPACE: ${{ github.workspace }}
+        GITHUB_WORKSPACE: ${{ inputs.working_dir }}
+        OUTPUT_FORMAT: ${{ inputs.output_format }}
       run: python ${{ github.action_path }}/script.py
