--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
       shell: bash
       run: |
         pip install --upgrade pip
-        pip install ${{ github.action_path }}/requirements.txt
+        pip install -r ${{ github.action_path }}/requirements.txt
       
     - name: Run Python script
       shell: bash
