--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
-vname: 'Run Trivy scan - linux - with summary'
+name: 'Summarize all files in a repo'
 author: 'xander-rudolph'
 branding:
-  icon: 'git-pull-request'
+  icon: 'anchor'
   color: 'green'
-description: 'Checks a directory for any vulnerabilities and adds a step summary'
+description: 'Reads the whole repository to generate a readme.md file'
 inputs:
   working_dir:
     description: "Working path for scan"
@@ -23,11 +23,13 @@ runs:
         python-version: '3.13' 
     
     - name: Install dependencies
+      shell: bash
       run: |
-        pip install --upgrade pip
+        python -m pip install --upgrade pip
         pip install ${{ github.action_path }}/requirements.txt
       
     - name: Run Python script
+      shell: bash
       env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
       run: python ${{ github.action_path }}/script.py
